<resources>
    <string name="app_name">University</string>
    <string name="title_activity_student">Student</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">User Name</string>
    <string name="nav_header_subtitle">Student</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_course_registration">Register Course</string>
    <string name="menu_results">View Results</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_logout">Log Out</string>
    
    <string name="admin_menu_drawer_open">Admin Drawer Open</string>
    <string name="admin_menu_drawer_close">Admin Drawer Close</string>

    <string name="year_semester_prompt"> Select Year and Semester </string>
</resources>