<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_course_registration"
        android:name="com.example.university.ui.courses.CoursesFragment"
        android:label="@string/menu_course_registration"
        tools:layout="@layout/fragment_courses" />
    <fragment
        android:id="@+id/nav_results"
        android:name="com.example.university.ui.results.ResultsFragment"
        android:label="@string/menu_results"
        tools:layout="@layout/fragment_results" />
    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.university.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

</navigation>